cambio numero de cuentas

--- a/index.html
+++ b/index.html
@@ -473,10 +473,10 @@
 										<div class="col-xs-2"><img src="./images/Icons/luna de miel.png"  height="50"/>	</div>
 										<div class="col-xs-10"><p style="margin-top: 14px;">Luna de miel</p></div>
 										<div class="col-xs-12" id="cuenta" style="display: none;">
-											<p id="">Cuenta: 154 050 9488</p>
+											<p id="">Tarjeta: <a href="javascript:;">4152 3135 2258 8792</a></p>
 											<p>Bancomer</p>
 											<p>Estefania Lerma Fierro</p>
-											<p id="">CLABE: <a href="javascript:;">002743900778986455</a></p>
+											<p id="">Tarjeta: <a href="javascript:;">5256 7839 6893 4795</a></p>
 											<p>Banamex</p>
 											<p>Leobardo German Castro</p>
 										</div>
